kubernetes/k3s/01-cert-manager.yaml
# https://rancher.com/docs/k3s/latest/en/helm/#automatically-deploying-manifests-and-helm-charts
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
