kubernetes/k3s/ingress-nginx-helm-chart.yaml
# https://rancher.com/docs/k3s/latest/en/helm/#automatically-deploying-manifests-and-helm-charts
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
